--- a/more.html
+++ b/more.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <title>More | Kakao Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
