--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,8 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>Setting | Kakao Clone</title>
+    <title>Settings | Kakao Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -28,7 +29,7 @@
     <header class="header">
       <div class="header__header-column">
         <a href="javascript:history.back();" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left fa"></i>
         </a>
         <h1 class="header__title">Settings</h1>
       </div>
