--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,10 +48,10 @@
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Nicolás Serrano
+                Dang Dang
               </span>
               <span class="friend__status">
-                nomadcoders.co
+                I'm Strong Dog
               </span>
             </div>
           </div>
@@ -74,13 +74,13 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="friend__avatar" />
+            <img src="images/friend.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Nicolás Serrano
+                Gold
               </span>
               <span class="friend__status">
-                nomadcoders.co
+                I'm happy
               </span>
             </div>
           </div>
@@ -119,5 +119,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!!
+      </span>
+    </div>
   </body>
 </html>
