--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -50,13 +50,13 @@
           <a href="chat.html">
             <div class="chats__chat friend friend--lg">
               <div class="friend__column">
-                <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                <img src="images/friend.jpg" class="m-avatar friend__avatar" />
                 <div class="friend__content">
                   <span class="friend__name">
-                    Lynn
+                    골드리트리버
                   </span>
                   <span class="friend__bottom-text">
-                    Going home!
+                    멍멍! 멍멍멍!
                   </span>
                 </div>
               </div>
@@ -95,5 +95,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!!
+      </span>
+    </div>
   </body>
 </html>
