--- a/find.html
+++ b/find.html
@@ -87,7 +87,7 @@
             <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Nicolás Serrano
+                Dang Dang
               </span>
             </div>
           </div>
@@ -123,5 +123,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!!
+      </span>
+    </div>
   </body>
 </html>
