--- a/more.html
+++ b/more.html
@@ -51,10 +51,10 @@
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Nicolás Serrano
+                Dang Dang
               </span>
               <span class="friend__status">
-                itnicolasme@gmail.com
+                dang@dang.com
               </span>
             </div>
           </div>
@@ -137,5 +137,10 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">
+        Please make your screen small!!
+      </span>
+    </div>
   </body>
 </html>
